<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.tousifosman.device_security_check_demo.MainActivity">


        <ImageView
            android:id="@+id/ivRooted"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_secure"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_rooted"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/ivRooted"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivRooted"
            app:layout_constraintBottom_toBottomOf="@id/ivRooted"/>

        <ImageView
            android:id="@+id/ivRootPermission"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_secure"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivRooted"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_has_root"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/ivRootPermission"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivRootPermission"
            app:layout_constraintBottom_toBottomOf="@id/ivRootPermission"/>

        <TextView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:text="1"
            android:gravity="center"
            android:padding="1dp"
            android:textAlignment="center"
            android:background="@drawable/bg_circle"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/ivRooted"
            app:layout_constraintBottom_toBottomOf="@+id/ivRootPermission"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/hr_line"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivRootPermission"/>

        <ImageView
            android:id="@+id/ivEmulator"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_secure"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivRootPermission"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_on_emulator"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/ivEmulator"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivEmulator"
            app:layout_constraintBottom_toBottomOf="@id/ivEmulator"/>

        <TextView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:text="2"
            android:gravity="center"
            android:padding="1dp"
            android:textAlignment="center"
            android:background="@drawable/bg_circle"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/ivEmulator"
            app:layout_constraintBottom_toBottomOf="@+id/ivEmulator"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/hr_line"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivEmulator"/>

        <ImageView
            android:id="@+id/ivUsbDebugging"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_secure"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivEmulator"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/usb_debugging_active"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/ivUsbDebugging"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivUsbDebugging"
            app:layout_constraintBottom_toBottomOf="@id/ivUsbDebugging"/>

        <ImageView
            android:id="@+id/ivDebuggerConnected"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_secure"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivUsbDebugging"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/debugger_connected"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/ivDebuggerConnected"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivDebuggerConnected"
            app:layout_constraintBottom_toBottomOf="@id/ivDebuggerConnected"/>

        <TextView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:text="3"
            android:gravity="center"
            android:padding="1dp"
            android:textAlignment="center"
            android:background="@drawable/bg_circle"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/ivUsbDebugging"
            app:layout_constraintBottom_toBottomOf="@+id/ivDebuggerConnected"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/hr_line"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivDebuggerConnected"/>

        <ImageView
            android:id="@+id/ivTampered"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_secure"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivDebuggerConnected"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_tampered"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/ivTampered"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivTampered"
            app:layout_constraintBottom_toBottomOf="@id/ivTampered"/>

        <TextView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:text="4"
            android:gravity="center"
            android:padding="1dp"
            android:textAlignment="center"
            android:background="@drawable/bg_circle"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/ivTampered"
            app:layout_constraintBottom_toBottomOf="@+id/ivTampered"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/hr_line"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivTampered"/>

        <ImageView
            android:id="@+id/ivHookFramework"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_secure"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivTampered"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hook_framework"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/ivHookFramework"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivHookFramework"
            app:layout_constraintBottom_toBottomOf="@id/ivHookFramework"/>

        <TextView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:text="5"
            android:gravity="center"
            android:padding="1dp"
            android:textAlignment="center"
            android:background="@drawable/bg_circle"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/ivHookFramework"
            app:layout_constraintBottom_toBottomOf="@+id/ivHookFramework"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/hr_line"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivHookFramework"/>

        <ImageView
            android:id="@+id/ivAppHooked"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_secure"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivHookFramework"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_hooked"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/ivAppHooked"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivAppHooked"
            app:layout_constraintBottom_toBottomOf="@id/ivAppHooked"/>

        <TextView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:text="6"
            android:gravity="center"
            android:padding="1dp"
            android:textAlignment="center"
            android:background="@drawable/bg_circle"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/ivAppHooked"
            app:layout_constraintBottom_toBottomOf="@+id/ivAppHooked"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/hr_line"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivAppHooked"/>

        <ImageView
            android:id="@+id/ivMalware"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_secure"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAppHooked"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/malware_detected"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/ivMalware"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivMalware"
            app:layout_constraintBottom_toBottomOf="@id/ivMalware"/>

        <TextView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:text="7"
            android:gravity="center"
            android:padding="1dp"
            android:textAlignment="center"
            android:background="@drawable/bg_circle"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/ivMalware"
            app:layout_constraintBottom_toBottomOf="@+id/ivMalware"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
